--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li class="active"><a href="index.html">Home</a></li>
+          <li class="active"><a href="#">Home</a></li>
           <li><a href="#about">Wedding Designs</a></li>
           <li><a href="#testimonials">Testimonials</a></li>  
           <li class="book-a-table text-center"><a href="#contact">Contact Us</a></li>
