--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Restaurantly Template - Index</title>
-  <meta content="" name="descriptison">
+  <title>Wedding Website | Create your own custom wedding website</title>
+  <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
@@ -33,13 +33,13 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo mr-auto"><a href="#">The Magical MomentZ</a></h1>
+      <h1 class="logo mr-auto"><a href="#hero">The Magical MomentZ</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li class="active"><a href="#">Home</a></li>
+          <li class="active"><a href="#hero">Home</a></li>
           <li><a href="#about">Wedding Designs</a></li>
           <li><a href="#testimonials">Testimonials</a></li>  
           <li class="book-a-table text-center"><a href="#contact">Contact Us</a></li>
@@ -48,8 +48,9 @@
 
     </div>
   </header><!-- End Header -->
+  <main id="main">
 
-  <!-- ======= Hero Section ======= -->
+      <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center" style="background-image:url(assets/img/g7.jpg)">
     <div class="container position-relative text-center text-lg-left" data-aos="zoom-in" data-aos-delay="100">
       <div class="row">
@@ -66,8 +67,6 @@
       </div>
     </div>
   </section><!-- End Hero -->
-
-  <main id="main">
 
 <!-- ======= About Section ======= -->
 <section id="about" class="about">
@@ -362,7 +361,7 @@
         <div class="col-lg-2 col-md-6 footer-links">
           <h4>Useful Links</h4>
           <ul>
-            <li><i class="fa fa-chevron-right"></i> <a href="#home">Home</a></li>
+            <li><i class="fa fa-chevron-right"></i> <a href="#hero">Home</a></li>
             <li><i class="fa fa-chevron-right"></i> <a href="#about">Wedding Designs</a></li></li>          
             <li><i class="fa fa-chevron-right"></i> <a href="#testimonials" >Testimonials</a></li>
             <li><i class="fa fa-chevron-right"></i> <a href="contact" >Contact Us</a></li>
