--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Contact</h2>
+          <h2>Contact Us</h2>
           <p style="font-size: 20px; margin-top: 10px;">You can call, email or whatsapp us directly,
             or just fill the form and send it to us.</p>
         </div>
@@ -284,25 +284,30 @@
 
         <div class="row mt-5">
   
-          <div class="col-lg-4">
+          <div class="col-lg-6">
             <div class="info">  
               <div class="email">
                 <i class="fa fa-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <a href="mailto:themagicalmomentz@gmail.com"><b>themagicalmomentz@gmail.com</b></a>
               </div>
   
               <div class="phone">
                 <i class="fa fa-phone"></i>
-                <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <h4>Phone:</h4>
+                <a target="_blank" href="tel:+918368019463"><b>+91 8368019463</b></a>
               </div>
-  
+              <div class="phone">
+                <i class="fa fa-whatsapp"></i>
+                <h4>WhatsApp:</h4>
+                <a target="_blank" href="https://wa.me/918368019463?text=Hello! We would like to know more about the Wedding Website designs. Thanks!">
+                  <b>+91 8368019463</b></a>
+              </div>
             </div>
   
           </div>
   
-          <div class="col-lg-8 mt-5 mt-lg-0">
+          <div class="col-lg-6 mt-5 mt-lg-0">
   
             <div class="php-email-form">
               <div class="form-row">
@@ -345,12 +350,12 @@
   <div class="footer-top">
     <div class="container">
       <div class="row">
-        <div class="col-lg-3 col-md-6">
+        <div class="col-lg-6 col-md-8">
           <div class="footer-info">
-            <h3>Weddingly</h3>
+            <h3>The Magical MomentZ</h3>
             <p>            
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+              <strong>Phone:</strong><a target="_blank" href="tel:+918368019463"><b> +91 8368019463</b></a><br>
+              <strong>Email:</strong><a href="mailto:themagicalmomentz@gmail.com"><b> themagicalmomentz@gmail.com</b></a><br>
             </p>
             <div class="social-links mt-3">            
               <a href="#" > <i class="fa fa-instagram"></i></a>
@@ -358,13 +363,13 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-2 col-md-6 footer-links">
+        <div class="col-lg-6 col-md-4 footer-links">
           <h4>Useful Links</h4>
           <ul>
             <li><i class="fa fa-chevron-right"></i> <a href="#hero">Home</a></li>
             <li><i class="fa fa-chevron-right"></i> <a href="#about">Wedding Designs</a></li></li>          
             <li><i class="fa fa-chevron-right"></i> <a href="#testimonials" >Testimonials</a></li>
-            <li><i class="fa fa-chevron-right"></i> <a href="contact" >Contact Us</a></li>
+            <li><i class="fa fa-chevron-right"></i> <a href="#contact" >Contact Us</a></li>
           </ul>
         </div>     
       </div>
