--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                 <a target="_blank" href="tel:+918368019463"><b>+91 8368019463</b></a>
               </div>
               <div class="phone">
-                <i class="fa fa-whatsapp"></i>
+                <i class="fa fa-whatsapp" style="font-size: 28px;"></i>
                 <h4>WhatsApp:</h4>
                 <a target="_blank" href="https://wa.me/918368019463?text=Hello! We would like to know more about the Wedding Website designs. Thanks!">
                   <b>+91 8368019463</b></a>
@@ -352,14 +352,17 @@
       <div class="row">
         <div class="col-lg-6 col-md-8">
           <div class="footer-info">
-            <h3>The Magical MomentZ</h3>
+            <!-- <h3>The Magical MomentZ</h3>
             <p>            
               <strong>Phone:</strong><a target="_blank" href="tel:+918368019463"><b> +91 8368019463</b></a><br>
               <strong>Email:</strong><a href="mailto:themagicalmomentz@gmail.com"><b> themagicalmomentz@gmail.com</b></a><br>
-            </p>
-            <div class="social-links mt-3">            
-              <a href="#" > <i class="fa fa-instagram"></i></a>
-              <a href="#" > <i class="fa fa-facebook-square"></i></a>                                   
+              <strong>WhatsApp:</strong><a target="_blank" href="https://wa.me/918368019463?text=Hello! We would like to know more about the Wedding Website designs. Thanks!">
+                <b>+91 8368019463</b></a><br>
+            </p> -->
+            <div class="social-links mt-3">
+              <h3>Follow The Magical Momentz</h3>         
+              <a target="_blank" href="https://www.instagram.com/themagicalmomentz/" > <i class="fa fa-instagram"></i></a>
+              <a target="_blank" href="https://www.facebook.com/The-Magical-Momentz-105083611368415" > <i class="fa fa-facebook-square"></i></a>                                   
             </div>
           </div>
         </div>
@@ -378,7 +381,7 @@
 
   <div class="container">
     <div class="copyright">
-      &copy; Copyright <strong><span>The Magical MomentZ</span></strong>. All Rights Reserved
+      &copy; Copyright <strong><span>The Magical Momentz</span></strong>. All Rights Reserved
     </div>  
   </div>
 </footer><!-- End Footer -->
