--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Wedding Website | Create your own custom wedding website</title>
-  <meta content="" name="description">
+  <title>Have your own custom wedding website</title>
+  <meta content="Capture the memories in a Customized Wedding Website. Have a website where you can send wedding invitations and share all your wedding details, photos, videos, and stories in a unique and a stylish way." name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
@@ -40,8 +40,7 @@
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="#hero">Home</a></li>
-          <li><a href="#about">Wedding Designs</a></li>
-          <li><a href="#testimonials">Testimonials</a></li>  
+          <li><a href="#about">Wedding Website Designs</a></li>        
           <li class="book-a-table text-center"><a href="#contact">Contact Us</a></li>
         </ul>
       </nav><!-- .nav-menu -->
@@ -56,7 +55,7 @@
       <div class="row">
         <div class="col-lg-12">
           <h1>Capture the memories in a customized<span> Wedding Website</span></h1>
-          <h2 style="font-weight: bolder;">Have a website where you can share all your wedding details, photos, videos, and stories in a unique and stylish way.</h2>
+          <h2>Have a website where you can send wedding invitations online and share all your wedding details, photos, videos, and stories in a unique and a stylish way.</h2>
           <h2>Capturing moments for a lifetime!!!</h2>
           <div class="btns">
             <a href="#about" class="btn-menu animated fadeInUp scrollto">Check Designs</a>
@@ -72,7 +71,7 @@
 <section id="about" class="about">
   <div class="container" data-aos="fade-up">
     <div class="section-title">
-      <h2>Wedding Invitation, Pre-Wedding and Wedding Website Designs</h2>
+      <h2>Wedding Invitation, Pre-Wedding and Post-Wedding Website Designs</h2>
       <p style="font-size: 26px; color: white">All these designs can be used for both Pre-Wedding and Post-Wedding</p>
 
    
@@ -87,7 +86,7 @@
       </div>
       <div class="container">
         <div class="about-img">
-          <a href="https://webeinvite.web.app/" target="_blank" class="animated fadeInUp scrollto"
+          <a href="http://jenniferwedstom.themagicalmomentz.com/" target="_blank" class="animated fadeInUp scrollto"
             style="background: black;">
             <img src="assets/img/downloads/Karleneandjona.jpg" alt="">
           </a>
@@ -96,7 +95,7 @@
       <div class="container position-relative text-center">
         <div class="row">
           <div class="col-lg-10">            
-            <a href="https://webeinvite.web.app/" target="_blank" class="commonBtn animated fadeInUp scrollto"
+            <a href="http://jenniferwedstom.themagicalmomentz.com/" target="_blank" class="commonBtn animated fadeInUp scrollto"
               style="margin-top:5px;">View Live Demo</a>
           </div>
         </div>
@@ -107,13 +106,13 @@
       <div class="container position-relative theme">
         <div class="row">
           <div class="col-lg-10">
-            <h3 style="margin-top:10px;" class="goldcolor">Floral Pink Theme</h3>   
+            <h3 style="margin-top:10px;" class="goldcolor">Pink Sapphire Theme</h3>   
           </div>
         </div>
       </div>
       <div class="container">
         <div class="about-img">
-          <a href="https://bride-weds-groom.web.app/" target="_blank" class="animated fadeInUp scrollto"
+          <a href="http://theme2.themagicalmomentz.com/" target="_blank" class="animated fadeInUp scrollto"
             style="background: black;">
             <img src="assets/img/downloads/lois.jpg" alt="">
           </a>
@@ -122,7 +121,7 @@
       <div class="container position-relative text-center">
         <div class="row">
           <div class="col-lg-10">            
-            <a href="https://bride-weds-groom.web.app/" target="_blank" class="commonBtn animated fadeInUp scrollto"
+            <a href="http://theme2.themagicalmomentz.com/" target="_blank" class="commonBtn animated fadeInUp scrollto"
               style="margin-top:5px;">View Live Demo</a>
           </div>
         </div>
@@ -199,7 +198,7 @@
     </section><!-- End Why Us Section -->
 
     <!-- ======= Testimonials Section ======= -->
-    <section id="testimonials" class="testimonials section-bg">
+    <!-- <section id="testimonials" class="testimonials section-bg">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -267,7 +266,8 @@
         </div>
 
       </div>
-    </section><!-- End Testimonials Section -->
+    </section> -->
+    <!-- End Testimonials Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
@@ -370,8 +370,7 @@
           <h4>Useful Links</h4>
           <ul>
             <li><i class="fa fa-chevron-right"></i> <a href="#hero">Home</a></li>
-            <li><i class="fa fa-chevron-right"></i> <a href="#about">Wedding Designs</a></li></li>          
-            <li><i class="fa fa-chevron-right"></i> <a href="#testimonials" >Testimonials</a></li>
+            <li><i class="fa fa-chevron-right"></i> <a href="#about">Wedding Website Designs</a></li></li>  
             <li><i class="fa fa-chevron-right"></i> <a href="#contact" >Contact Us</a></li>
           </ul>
         </div>     
