--- a/index.html
+++ b/index.html
@@ -140,18 +140,19 @@
     <div class="mrg20">
       <h5>What benefits you will get from this</h5>
       <ul>
-        <li><i class="fa fa-check-circle" ></i> You can have any name for your website. Like, JenniferWedsTom.com</li>
-        <li><i class="fa fa-check-circle"></i> Super Flexible - Change the photos, videos and update the content and stories on the website whenever you want</li> 
-        <li><i class="fa fa-check-circle" ></i> Privacy - You can opt to choose who can see your website</li>
-        <li><i class="fa fa-check-circle" ></i> Integrated Google maps - Add venue locations for different functions/events</li>
-        <li><i class="fa fa-check-circle" ></i> Customizable website designs</li>
+        <li><i class="fa fa-check-circle" ></i> You can have any name for your website. Like, <b>JenniferWedsTom.com</b></li>
+        <li><i class="fa fa-check-circle"></i> <b>Super Flexible</b> - Change the photos, videos and update the content and stories on the website whenever you want</li> 
+        <li><i class="fa fa-check-circle" ></i> <b>Cost Effective</b> - You can send wedding invitations online, rather than sending wedding cards</li>
+        <li><i class="fa fa-check-circle" ></i> <b>Privacy</b> - You can opt to choose who can see your website</li>
+        <li><i class="fa fa-check-circle" ></i> <b>Integrated Google maps</b> - Add venue locations for different functions/events</li>
+        <li><i class="fa fa-check-circle" ></i> <b>Customizable</b> All designs can be easily customized</li>
         <li><i class="fa fa-check-circle" ></i> Store all the photos and videos at one place and share it with others</li>
         <li><i class="fa fa-check-circle"></i> Share as many stories as you like</li>
         <li><i class="fa fa-check-circle"></i> Lifetime access for the website</li> 
         </ul>
     </div>
     <div class="text-center mrg20 goldcolor" style="font-weight: bold;">
-      <h4>For more designs contact us</h4></div>
+      <h4><b>For more designs contact us</b></h4></div>
   </div>
   <hr class="new5">
 </section><!-- End About Section -->
