--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       </div>
       <div class="container">
         <div class="about-img">
-          <a href="http://jenniferwedstom.themagicalmomentz.com/" target="_blank" class="animated fadeInUp scrollto"
+          <a href="http://jennifer-weds-tom.themagicalmomentz.com/" target="_blank" class="animated fadeInUp scrollto"
             style="background: black;">
             <img src="assets/img/downloads/Karleneandjona.jpg" alt="">
           </a>
@@ -95,7 +95,7 @@
       <div class="container position-relative text-center">
         <div class="row">
           <div class="col-lg-10">            
-            <a href="http://jenniferwedstom.themagicalmomentz.com/" target="_blank" class="commonBtn animated fadeInUp scrollto"
+            <a href="http://jennifer-weds-tom.themagicalmomentz.com/" target="_blank" class="commonBtn animated fadeInUp scrollto"
               style="margin-top:5px;">View Live Demo</a>
           </div>
         </div>
