--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <li><i class="fa fa-check-circle" ></i> <b>Cost Effective</b> - You can send wedding invitations online, rather than sending wedding cards</li>
         <li><i class="fa fa-check-circle" ></i> <b>Privacy</b> - You can opt to choose who can see your website</li>
         <li><i class="fa fa-check-circle" ></i> <b>Integrated Google maps</b> - Add venue locations for different functions/events</li>
-        <li><i class="fa fa-check-circle" ></i> <b>Customizable</b> All designs can be easily customized</li>
+        <li><i class="fa fa-check-circle" ></i> <b>Customizable</b> - All designs can be easily customized</li>
         <li><i class="fa fa-check-circle" ></i> Store all the photos and videos at one place and share it with others</li>
         <li><i class="fa fa-check-circle"></i> Share as many stories as you like</li>
         <li><i class="fa fa-check-circle"></i> Lifetime access for the website</li> 
