--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <div class="box" data-aos="zoom-in" data-aos-delay="200">
               <span>02</span>
               <h4>Memory For a Lifetime</h4>
-              <p>A wedding is the biggest day of your life, so you would want to capture all the moments in a beautiful way for the rest of your life. And we do the same for you by creating your customized website.</p>
+              <p>We create a customized wedding website to capture all the wonderful moments of your big wedding day in the most beautiful way that will remain as an everlasting memory.</p>
             </div>
           </div>
 
