--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       </div>
       <div class="container">
         <div class="about-img">
-          <a href="http://jennifer-weds-tom.themagicalmomentz.com/" target="_blank" class="animated fadeInUp scrollto"
+          <a href="http://snehawedsvarun.themagicalmomentz.com/" target="_blank" class="animated fadeInUp scrollto"
             style="background: black;">
             <img src="assets/img/downloads/Karleneandjona.jpg" alt="">
           </a>
@@ -94,7 +94,7 @@
       <div class="container position-relative text-center">
         <div class="row">
           <div class="col-lg-10">            
-            <a href="http://jennifer-weds-tom.themagicalmomentz.com/" target="_blank" class="commonBtn animated fadeInUp scrollto"
+            <a href="http://snehawedsvarun.themagicalmomentz.com/" target="_blank" class="commonBtn animated fadeInUp scrollto"
               style="margin-top:5px;">View Live Demo</a>
           </div>
         </div>
@@ -113,7 +113,7 @@
         <div class="about-img">
           <a href="http://theme2.themagicalmomentz.com/" target="_blank" class="animated fadeInUp scrollto"
             style="background: black;">
-            <img src="assets/img/downloads/lois.jpg" alt="">
+            <img src="assets/img/downloads/snvarun.jpg" alt="">
           </a>
         </div>
       </div>
@@ -139,7 +139,7 @@
     <div class="mrg20">
       <h5>What benefits you will get from this</h5>
       <ul>
-        <li><i class="fa fa-check-circle" ></i> You can have any name for your website. Like, <b>JenniferWedsTom.com</b></li>
+        <li><i class="fa fa-check-circle" ></i> You can have any name for your website. Like, <b>SnehaWedsVarun.com</b></li>
         <li><i class="fa fa-check-circle"></i> <b>Super Flexible</b> - Change the photos, videos and update the content and stories on the website whenever you want</li> 
         <li><i class="fa fa-check-circle" ></i> <b>Cost Effective</b> - You can send wedding invitations online, rather than sending wedding cards</li>
         <li><i class="fa fa-check-circle" ></i> <b>Privacy</b> - You can opt to choose who can see your website</li>
