--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Have your own custom wedding website</title>
-  <meta content="Capture the memories in a Customized Wedding Website. Have a website where you can send wedding invitations and share all your wedding details, photos, videos, and stories in a unique and a stylish way." name="description">
+  <title>Have your own custom wedding website | Share Photos, Videos and other wedding details all in one place</title>
+	<meta content="Capture the memories in a Customized Wedding Website. Have a website where you can send wedding invitations and share all your wedding details, photos, videos, and stories in a unique and a stylish way." name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
