--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <div class="box" data-aos="zoom-in" data-aos-delay="200">
               <span>02</span>
               <h4>Memory For a Lifetime</h4>
-              <p>We create a customized wedding website to capture all the wonderful moments of your big wedding day in the most beautiful way that will remain as an everlasting memory.</p>
+              <p>We create a customized wedding website to capture all the wonderful moments of your big day in the most beautiful way that will remain as an everlasting memory.</p>
             </div>
           </div>
 
