--- a/index.html
+++ b/index.html
@@ -223,7 +223,10 @@
               <div class="phone">
                 <i class="fa fa-phone"></i>
                 <h4>Phone:</h4>
-                <a target="_blank" href="tel:+918368019463"><b>+91 8368019463</b></a>
+                <a target="_blank" href="tel:+918368019463"><b>+91 8368019463</b></a>         
+              </div>
+              <div class="secPhone">              
+                <a target="_blank" href="tel:+918368019463"><b>+91 9811572303</b></a>
               </div>
               <div class="phone">
                 <i class="fa fa-whatsapp" style="font-size: 28px;"></i>
